2005-09-16  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (environ_init): Issue an error if GetEnvironmentStrings
	fails and return.

2005-09-15  Christopher Faylor  <cgf@timesys.com>

	* pinfo.h (EXITCODE_SET): Move out of range of Windows error.
	(EXITCODE_NOSET): Ditto.
	* sigproc.cc (no_signals_available): Remove check for hwait_sig.  Just
	rely on my_sendsig.  Pass in an argument controlling when it is
	appropriate to test EXITCODE_SET.
	(proc_can_be_signalled): Remove checks for myself since this function
	is never called in that context.
	(sigproc_init): Pre-initialize my_sendsig to non-zero so that
	proc_can_be_signalled will know that we expect to be signalable soon.
	(sig_send): Change debugging output.

2005-09-15  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (no_signals_available): Return true if sending to self
	from the signal thread.
	(wait_sig): Correct so that WaitForSingleObject is called when
	hMainThread is != 0, rather than the reverse.

	* cygheap.cc (cygheap_fixup_in_child): Clarify potential error message.

	* fork.cc (fork_copy): Cosmetic change.

2005-09-15  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (wait_sig): Reorganize exit case so that ExitProcess is
	always called, since that is the intent of sending a __SIGEXIT.  Wait
	forever for main thread to go away since, presumably, the main thread
	told us it was going away.

2005-09-14  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (av::fixup): Avoid breaking out of the wrong "loop".

2005-09-14  Christopher Faylor  <cgf@timesys.com>

	* hookapi.cc (hook_or_detect_cygwin): Simplify very slightly.
	* spawn.cc (av::fixup): Guard against problems reading an executable
	which does not match Microsoft's documentation about PE format.

2005-09-14  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (av::error): Eliminate.
	(av::av): Remove reference to error.
	(av::replace0_maybe): Ditto.
	(av::dup_maybe): Ditto.
	(av::dup_all): Ditto.
	(av::unshift): Ditto.